--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
       function ViewModel() {
         var self = this
         self.editing = ko.observable(false)
-        self.chartRange = ko.observable('all')
+        self.chartRange = ko.observable('30000')
         self.logAxis = ko.observable(false)
         self.logAxis.subscribe(function(logAxis) {
           var type = logAxis ? 'logarithmic' : 'linear'
@@ -124,15 +124,14 @@
 
       function setXAxisRange() {
         var axis = chart.xAxis[0]
-        if(viewModel.chartRange() === 'all') {
-          axis.setExtremes()
-        } else if (viewModel.chartRange() === 'freeze') {
-          var currentExtremes = axis.getExtremes()
+        var currentExtremes = axis.getExtremes()
+        if (viewModel.chartRange() === 'freeze') {
           axis.setExtremes(currentExtremes.min, currentExtremes.max)
         } else {
-          var now = (new Date()).getTime()
-          var low = now - viewModel.chartRange()
-          axis.setExtremes(low, now)
+          var padding = 1500
+          var now = Math.max((new Date()).getTime(), currentExtremes.dataMax)
+          var low = now - viewModel.chartRange() - padding
+          axis.setExtremes(low, now + padding)
         }
         setTimeout(setXAxisRange, 1000)
       }
@@ -188,10 +187,6 @@
       <div id='chart'></div>
       <div>
         <label>
-          <input type='radio' name='chart-range' value='all' data-bind='checked: chartRange'>
-          All
-        </label>
-        <label>
           <input type='radio' name='chart-range' value='300000' data-bind='checked: chartRange'>
           5 min
         </label>
@@ -205,7 +200,7 @@
         </label>
         <label>
           <input type='radio' name='chart-range' value='freeze' data-bind='checked: chartRange'>
-          Freeze
+          Pause
         </label>
       </div>
       <div>
