Generate url for chart configuration

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,12 +16,16 @@ body {
   font-family: Inconsolata;
 }
 
+footer {
+  text-align: right;
+}
+
 button {
   font-size: 15px;
 }
 
 .container {
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
 }
 
