--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <title>Web EPICS</title>
 
     <link rel='stylesheet' href='{{ url_for("static", filename="css/style.css") }}' type='text/css'>
+    <link rel='apple-touch-icon' href='{{ url_for("static", filename="images/icon.png") }}'/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <script src='{{ url_for("static", filename="js/jquery.js") }}'></script>
